More tests to debug weird competition issue